# IDKGameEngine

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  Doxyfile.bak  LICENCE.txt  P2_input.txt  README.md  a.out  build.sh  finalInput.txt  loc.sh  new-project.sh
IDKGE/: config.lua
IDKGameEngine/: CMakeLists.txt
IDKGameEngine/docs/: README.md
IDKGameEngine/resources/planes/: plane-0.idkvi  plane-1.idkvi  plane-2.idkvi  plane-2.txt  plane-4.txt  plane-6.idkvi  plane-9.txt
IDKGameEngine/scripts/: newproject.sh
IDKGameEngine/shaders/: dirshadow-anim.vs  dirshadow.fs  dirshadow.vs  screenquad.fs  screenquad.vs  sky.fs  vsin_pos_only.vs
IDKGameEngine/shaders/UBOs/: UBOs.glsl
IDKGameEngine/shaders/deferred/: background.fs  geometrypass-anim.vs  geometrypass-instanced.fs  geometrypass-instanced.vs  geometrypass-terrain.fs  geometrypass-terrain.vs  geometrypass.fs  geometrypass.vs  lightingpass.fs  lightingpass_background.fs  lightingpass_pbr.fs  lightsource.fs  pbr.fs  volumetric_dirlight.fs
IDKGameEngine/shaders/postprocess/: additive.fs  blank.fs  blit.fs  bloom.fs  colorgrade.fs  downsample.fs  getdepth.fs  upsample.fs
IDKGameEngine/src/: IDKengine.h  IDKengine.hpp  export.cpp  idk_componentsystem.hpp  idk_engine.cpp  idk_engine.hpp  idk_engine_api.cpp  idk_engine_api.hpp  idk_module.hpp  idk_threadpool.hpp
IDKGameEngine/src/IDKaudio/: IDKaudio.h  IDKaudio.hpp  idk_audio.cpp  idk_audio.hpp
IDKGameEngine/src/IDKevents/: IDKevents.h  IDKevents.hpp  idk_event_manager.cpp  idk_event_manager.h  idk_event_manager.hpp  idk_keylog.hpp
project-setup/: CMakeLists.txt  build.sh
project-setup/Game/: main.cpp
scripts/GameTemplate/: CMakeLists.txt  build.sh
scripts/template/: CMakeLists.txt
src/: CMakeLists.txt  IDKengine.cpp  IDKengine.h  idk_componentsystem.h  idk_engine.cpp  idk_engine.h  idk_module.h  idk_threadpool.cpp  idk_threadpool.hpp  main.cpp  main.txt
src/IDKAudio/: CMakeLists.txt  idk_audio.cpp  idk_audio.hpp
src/IDKBuiltinCS/: CMakeLists.txt  IDKBuiltinCS.cpp  IDKBuiltinCS.hpp  idk_camera_cs.cpp  idk_camera_cs.hpp  idk_cmp_behaviour.cpp  idk_components.cpp  idk_components.hpp  idk_icon_cs.cpp  idk_icon_cs.hpp  idk_model_cs.cpp  idk_model_cs.hpp  idk_name_cs.cpp  idk_name_cs.hpp  idk_systems.cpp  idk_systems.hpp  idk_transform_cs.cpp  idk_transform_cs.hpp  sys-atmosphere.hpp  sys-audio.cpp  sys-audio.hpp  sys-camera.cpp  sys-camera.hpp  sys-gamestate.cpp  sys-gamestate.hpp  sys-gui.cpp  sys-gui.hpp  sys-lightsource.cpp  sys-lightsource.hpp  sys-model.cpp  sys-model.hpp  sys-particle.cpp  sys-particle.hpp  sys-physics.cpp  sys-physics.hpp  sys-physx.cpp  sys-physx.hpp  sys-planet.cpp  sys-planet.hpp  sys-player.cpp  (+14 more)
src/IDKBuiltinUI/: CMakeLists.txt  EditorUI.cpp  EditorUI.hpp  assets.cpp  drawcomponent.cpp  drawcomponent.hpp  export.cpp  idkui_components.cpp  idkui_components.hpp  theme.hpp
src/IDKECS/: CMakeLists.txt  IDKECS.hpp  common.hpp  idk_ecs.cpp  idk_ecs.hpp  idk_ecs.inl  idk_ecs_cmp.hpp  idk_ecs_component.hpp  idk_ecs_entity.hpp  idk_ecs_file.cpp  idk_ecs_file.hpp  idk_ecs_system.hpp
src/IDKEditorUI/: CMakeLists.txt  EditorUI.cpp  EditorUI.hpp  export.cpp
src/IDKEvents/: CMakeLists.txt  IDKEvents.hpp  idk_event_manager.cpp  idk_event_manager.hpp  idk_events.cpp  idk_events.hpp  idk_keylog.cpp  idk_keylog.hpp
src/IDKGameEngine/: CMakeLists.txt  IDKGameEngine.hpp  IDK_componentsystem.h  IDK_controller.cpp  IDK_controller.h  IDK_engine.cpp  IDK_engine.h  IDK_module.h  IDKengine.hpp  api.hpp  engine-main.cpp  export.cpp  idk_api_loader.hpp  idk_dynamiclib.cpp  idk_dynamiclib.hpp  idk_engine.cpp  idk_engine.hpp  idk_engine_api.cpp  idk_engine_api.hpp  idk_scene.cpp  idk_scene.hpp  idk_scripting.hpp  main.cpp  packager.cpp  packager.hpp
src/IDKIO/: CMakeLists.txt  IDKIO.hpp  callback.hpp  event.cpp  gamepad.cpp  gamepad.hpp  idk_io.cpp  idk_io.hpp  joystick.hpp
src/IDKThreading/: CMakeLists.txt  IDKThreading.hpp  idk_threadpool.cpp  idk_threadpool.hpp
src/IDK_core_modules/: IDK_core_modules.h  IDK_physics.cpp  IDK_physics.h  IDK_playercontrol.cpp  IDK_playercontrol.h
src/IDKaudio/: CMakeLists.txt  idk_audio.cpp  idk_audio.h  idk_audio.hpp
src/IDKcommon/: CMakeLists.txt  IDKcommon.h  idk_SDL_GL.h  idk_enums.h  idk_glcall.h  idk_utility.cpp  idk_utility.h
src/IDKcomponentsystems/: CMakeLists.txt  IDK_builtin_CS_common.h  IDKcomponentsystems.h  idk_camera_CS.cpp  idk_camera_CS.h  idk_character_controller.cpp  idk_character_controller.h  idk_grabbable.cpp  idk_grabbable.h  idk_lightsource_CS.cpp  idk_model_CS.cpp  idk_model_CS.h  idk_playercontrol.cpp  idk_playercontrol.h  idk_transform_CS.cpp  idk_transform_CS.h  idk_ui.cpp  idk_ui.h
src/IDKengine/: CMakeLists.txt  IDK_componentsystem.h  IDK_engine.cpp  IDK_engine.h  IDKgraphics.h
src/IDKevents/: CMakeLists.txt  idk_event_manager.cpp  idk_event_manager.h  idk_keylog.cpp  idk_keylog.hpp
src/IDKgraphics/: CMakeLists.txt  IDK_camera.cpp  IDK_camera.h  IDK_glInterface.cpp  IDK_glInterface.h  IDK_glShader.cpp  IDK_glShader.h  IDK_glUniforms.h  IDK_lightsource.h  IDK_renderengine.cpp  IDK_renderengine.h  IDKgraphics.h  camera.h  idk_camera.cpp  idk_camera.h  idk_drawmethods.cpp  idk_drawmethods.h  idk_glshaderfactory.cpp  idk_glshaderfactory.hpp  idk_lightsource.h  idk_lightsystem.cpp  idk_lightsystem.hpp  idk_model_manager.cpp  idk_model_manager.h  idk_noisegen.cpp  idk_noisegen.hpp  idk_renderengine.cpp  idk_renderengine.h  idk_texturemethods.cpp  model.cpp  model.h  modelsystem.h  renderengine.cpp  renderengine.h  renderer.cpp  renderer.h  shader.cpp  shader.h
src/IDKtools/: CMakeLists.txt  IDK_tools.cpp  IDK_tools.h  IDKtools.h  VHACD.h  convexdecompose.cpp  diffuseIBL.cpp  idk_tools.cpp  idk_tools.h  mapIBL.sh  objconvert.asdasdcpp  objconvert.cpp  specularIBL.cpp  texconvert.cpp
src/demos/: cube_physics.h  demos.h  school.h
src/gameobject/: IDKGameObject.h
src/idk_builtin_CS/: IDK_builtin_CS.h  IDK_lightsource_CS.cpp  IDK_model_CS.cpp  IDK_model_CS.h  IDK_transform_CS.cpp
src/libidk-old/: CMakeLists.txt  IDKgl.hpp  idk_enums.h  libidk.h
src/navmap/: navmap.h
(+689 files in other folders)
